<resources>
    <string name="app_name">Chefeea</string>

    <!-- Strings used in Main Activity -->
    <string name="surprise_button_text">Surprise me!</string>
    <string name="ingredients_button_text">What can I cook?</string>
    <string name="settings_button_description">Settings</string>
    <string name="drawer_button_description">Menu</string>

    <!-- Strings used in Drawer -->
    <string name="drawer_header_icon_description">User photo</string>
    <string name="drawer_header_title">My Kitchen</string>
    <string name="drawer_content_home">Home</string>
    <string name="drawer_content_fridge">Fridge</string>
    <string name="drawer_content_recipes">Recipes</string>
    <string name="drawer_content_shopping_list">Shopping List</string>
    <string name="drawer_content_timer">Timer</string>
    <string name="drawer_list_icon_item_content_description">Icon for each drawer action</string>

    <!-- Strings used in Settings Activity -->
    <string name="settings_title">Settings</string>

    <!-- Strings used in Preferences -->
    <string name="language_preference_key">language_preference</string>
    <string name="language_preference_title">Language</string>
    <string name="language_preference_default_value">EN</string>

    <string name="food_preference_key">food_preference</string>
    <string name="food_preference_title">Preference</string>
    <string name="food_preference_default_value">NON-VEG</string>

    <!-- Strings used in RecipeEntry Activity -->
    <string name="recipe_title">Recipe</string>
    <string name="recipe_photo_content_description">Dish photo</string>
    <string name="recipe_easy_content_description">Dish difficulty: easy</string>
    <string name="recipe_medium_content_description">Dish difficulty: medium</string>
    <string name="recipe_hard_content_description">Dish difficulty: hard</string>
    <string name="recipe_time_content_description">Recipe preparation time</string>
    <string name="recipe_ingredients_label_text">Ingredients</string>
    <string name="recipe_preparation_label_text">Preparation</string>
    <string name="recipe_button_text">Finished it!</string>
    <string name="recipe_ingredient_tick_content_description">User has this ingredient in their Fridge</string>
    <string name="recipe_intent_key">recipe</string>
    <string name="recipe_details_url_label">More details: </string>

    <!-- Strings used in Shopping List -->
    <string name="shopping_list_dialog_hint_ingredient">Ingredient</string>
    <string name="shopping_list_dialog_hint_quantity">Qty</string>

    <string name="shopping_list_dialog_title">Add ingredient</string>
    <string name="shopping_list_dialog_positive_button">Done</string>
    <string name="shopping_list_dialog_negative_button">Cancel</string>
    <string name="shopping_list_dialog_positie_toast">Ingredient added</string>
    <string name="shopping_list_dialog_negative_toast">No changes were made to the shopping list</string>
    <string name="shopping_list_dialog_exception_data">Exception at dialog data retrieval</string>

    <!-- Strings used in AppWidget -->
    <string name="appwidget_text">Ingredients</string>
    <string name="add_widget">Add widget</string>

    <string name="shared_element_transition_name">Shared element</string>
</resources>
