<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.chefeea.MainActivity">

    <Button
        android:id="@+id/surprise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_marginRight="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/surprise_button_margin_top"
        android:text="@string/surprise_button_text"
        android:textSize="@dimen/surprise_button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ingredients_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ingredients_button_margin_top"
        android:text="@string/ingredients_button_text"
        android:textSize="@dimen/ingredients_button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/surprise_button"
        app:layout_constraintStart_toStartOf="@+id/surprise_button"
        app:layout_constraintTop_toBottomOf="@+id/surprise_button" />

    <ImageView
        android:id="@+id/drawer_button"
        android:layout_width="@dimen/menus_width"
        android:layout_height="@dimen/menus_height"
        android:layout_marginLeft="@dimen/margin_start"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/menus_margin_top"
        android:contentDescription="@string/drawer_button_description"
        android:src="@drawable/ic_menu_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings_button"
        android:layout_width="@dimen/menus_width"
        android:layout_height="@dimen/menus_height"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginRight="@dimen/margin_end"
        android:layout_marginTop="@dimen/menus_margin_top"
        android:contentDescription="@string/settings_button_description"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>